Fix keyboard navigation over the search entry

The RbSearchEntry widget is a container so it can't have the focus.
It contains a GtkEntry which can. Setting 'can-focus' to TRUE was
confusing the gtk_container_focus() function causing focus to get
stuck on the RbSearchEntry.

https://bugzilla.gnome.org/show_bug.cgi?id=785805